fixed scroll overflow issue after first card swipe

--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ html {
 body {
     background-color: #00aaff;
     height: 100vh;
-    max-width: 800px;
+    max-width: 414px;
+    max-height: 736px
     /*width: 100vw;*/
     overflow: hidden;
 }
@@ -155,6 +156,7 @@ button:focus {
 
 
 #results-page {
+    overflow: hidden;
     height: 100vh;
     width: 100vw;
 }
@@ -201,6 +203,7 @@ button:focus {
     display: inline-block;
     background-color: rgba(255,255,255,0.8);
     box-shadow: 0 1px 0px rgba(0,0,0,0.1), 0 3px 5px rgba(0,0,0,0.08);
+    overflow: hidden;
     overflow-y: scroll;
 }
 
@@ -442,4 +445,3 @@ button:focus {
     }
 
 }
-
